--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <nav>
             <div class="logo">
                 <img src="logo.png">
@@ -23,6 +23,8 @@
                 </ul>
             </div>
         </nav>
+    </header>
+    <main>
         <div class="information">
             <div class="overlay">
                 <img src="flashlight-5998564_1280.png" class="mobile">
