controls to the left

--- a/index.html
+++ b/index.html
@@ -11,55 +11,18 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <img src="logo.png">
-            </div>
+
             <div class="nav-links">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Phone</a></li>
-                    <li><a href="#">Accessories</a></li>
-                    <li><a href="#">Cart</a></li>
+                    <li><a href="#">...</a></li>
+                    <li><a href="#">Contact me</a></li>
+                    <li><a href="#"> Language</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
-        <div class="information">
-            <div class="overlay">
-                <img src="flashlight-5998564_1280.png" class="mobile">
-                <div id="circle">
-                    <div class="feature one">
-                        <img src="camera.png">
-                        <div>
-                            <h1>About Me</h1>
-                            <p> some text</p>
-                        </div>
-                    </div>
-                    <div class="feature two">
-                        <img src="battery.png">
-                        <div>
-                            <h1>Proyects</h1>
-                            <p> some text</p>
-                        </div>
-                    </div>
-                    <div class="feature three">
-                        <img src="processor.png">
-                        <div>
-                            <h1>Education</h1>
-                            <p> some text</p>
-                        </div>
-                    </div>
-                    <div class="feature four">
-                        <img src="display.png">
-                        <div>
-                            <h1>Skills</h1>
-                            <p> some text</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <ul class="controls">
             <li>
                 <img src="arrow.png" id="upBtn">
@@ -80,6 +43,42 @@
                 <img src="arrow.png" id="downBtn">
             </li>
         </ul>
+        <div class="information">
+            <div class="overlay">
+                <img src="flashlight-5998564_1280.png" class="mobile">
+                <div id="circle">
+                    <div class="feature one">
+                        <img src="camera.png">
+                        <div>
+                            <h1>About Me</h1>
+                            <p> some text</p>
+                        </div>
+                    </div>
+                    <div class="feature two">
+                        <img src="battery.png">
+                        <div>
+                            <h1>Projects</h1>
+                            <p> some text</p>
+                        </div>
+                    </div>
+                    <div class="feature three">
+                        <img src="processor.png">
+                        <div>
+                            <h1>Education</h1>
+                            <p> some text</p>
+                        </div>
+                    </div>
+                    <div class="feature four">
+                        <img src="display.png">
+                        <div>
+                            <h1>Skills</h1>
+                            <p> some text</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <script>
         var skills = document.getElementById("skills")
