--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             </li>
         </ul>
         <div class="information">
-            <div class="overlay">
-                <img src="flashlight-5998564_1280.png" class="mobile">
+            <div class="hidder">
+                <!-- <img src="flashlight-5998564_1280.png" class="mobile"> -->
                 <div id="circle">
                     <div class="feature one">
                         <img src="camera.png">
