black bar vertical left almost ready

--- a/index.html
+++ b/index.html
@@ -24,24 +24,27 @@
     </header>
     <main>
         <ul class="controls">
-            <li>
-                <img src="arrow.png" id="upBtn">
-            </li>
-            <li id="about">
-                <h4>About me</h4>
-            </li>
-            <li id="projects">
-                <h4>Projects</h4>
-            </li>
-            <li id="education">
-                <h4>Education</h4>
-            </li>
-            <li id="skills">
-                <h4>Skills</h4>
-            </li>
-            <li>
-                <img src="arrow.png" id="downBtn">
-            </li>
+            <div>
+                <li>
+                    <img src="arrow.png" id="upBtn">
+                </li>
+                <li id="about">
+                    <h4>About me</h4>
+
+                </li>
+                <li id="projects">
+                    <h4>Projects</h4>
+                </li>
+                <li id="education">
+                    <h4>Education</h4>
+                </li>
+                <li id="skills">
+                    <h4>Skills</h4>
+                </li>
+                <li>
+                    <img src="arrow.png" id="downBtn">
+                </li>
+            </div>
         </ul>
         <div class="information">
             <div class="hidder">
