black bar vertical left ready

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 </div>
             </div>
         </div>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ex voluptate, nisi error eveniet, tempore
+                molestias quisquam aliquid sapiente veritatis repellendus beatae earum aut inventore voluptas laborum
+                maiores. Consequuntur, illo?</p>
+        </section>
 
     </main>
     <script>
