--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </nav>
     </header>
     <main>
-        <iframe id="myIframe" src="https://www.window-swap.com/Window" style="border:0px #ffffff none;" name="myiFrame"
+        <!-- <iframe id="myIframe" src="https://www.window-swap.com/Window" style="border:0px #ffffff none;" name="myiFrame"
             scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px"
             allowfullscreen></iframe>
-        <button>Click meeeeeeeeeeeeeeeeeeeee !</button>
+        <button>Click meeeeeeeeeeeeeeeeeeeee !</button> -->
 
         <section id="text_principal">
             <p>Hi there! I am Jessica Villar, a restless curious mind. </p>
@@ -153,12 +153,8 @@
 
         let btn = getElementByTag(button);
         btn.onclick = function reloading() {
-            let x = setInterval(fff, 3000);
+            iframe.src = iframe.src;
             console.log("test")
-        }
-        function fff() {
-            document.iframe.src += '';
-            console.log("test");
         }
 
     </script>
