reversing to basic

--- a/index.html
+++ b/index.html
@@ -25,10 +25,20 @@
     </header>
     <main>
         <section id="text_principal">
-            <p>Hi there! I am Jessica Villar, a restless curious mind. </p>
+            <p>Hi there! I am Jessica Villar a restless curious mind. </p>
+            <!-- <div id="1">
+                <ul class="flip4">
+                    <li>a restless curious mind.</li>
+                    <li> a laughs and jokes lover.</li>
+                    <li> a developper web.</li>
+                    <li> a team player.</li>
+
+                </ul>
+            </div> -->
 
 
-            <p> I am venezuela-spanish and in the 2019...<span class="letter"></span><i class="fas fa-plane"></i> I
+            <p> I am venezuela-spanish and in the 2019
+                <!--<span class="letter"></span><i class="fas fa-plane"></i> --> I
                 moved to
                 France!
             </p>
