basic style and info in place

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">...</a></li>
+                    <li><a href="#">Get my CV</a></li>
                     <li><a href="#">Contact me</a></li>
                     <li><a href="#"> Language</a></li>
                 </ul>
@@ -24,25 +24,14 @@
         </nav>
     </header>
     <main>
-        <section id="text_principal">
-            <p>Hi there! I am Jessica Villar a restless curious mind. </p>
-            <!-- <div id="1">
-                <ul class="flip4">
-                    <li>a restless curious mind.</li>
-                    <li> a laughs and jokes lover.</li>
-                    <li> a developper web.</li>
-                    <li> a team player.</li>
-
-                </ul>
-            </div> -->
-            <p> I am venezuela-spanish and in the 2019
-                <!--<span class="letter"></span><i class="fas fa-plane"></i> --> I
-                moved to
-                France!
-            </p>
-            <p> I am journalist, but when I changed country I also decide to change proffesional path and become
-                a programmer. Right now i am studing to get my certificate of web developper and looking for a stage in
-                Lyon or close to this wonderful city.</p>
+        <section id="textPrincipal">
+            <article id="base">
+                <p>Hi there! I am Jessica Villar a restless curious mind. </p>
+                <p> I am venezuela-spanish and in the 2019 I moved to France!</p>
+                <p> I am journalist, but when I changed country I also decide to change proffesional path and become
+                    a programmer. Right now i am studing to get my certificate of web developper and looking for a stage
+                    in Lyon or close to this wonderful city.</p>
+            </article>
         </section>
         <ul class="controls">
             <div>
@@ -69,7 +58,6 @@
         </ul>
         <div class="hidder_container">
             <div class="hidder">
-                <!-- <img src="flashlight-5998564_1280.png" class="mobile"> -->
                 <div id="circle">
                     <div class="feature one">
                         <img src="camera.png">
