--- a/about.html
+++ b/about.html
@@ -1,18 +1,7 @@
-<p>Hi there! I am Jessica Villar a restless curious mind. </p>
-<!-- <div id="1">
-                <ul class="flip4">
-                    <li>a restless curious mind.</li>
-                    <li> a laughs and jokes lover.</li>
-                    <li> a developper web.</li>
-                    <li> a team player.</li>
-
-                </ul>
-            </div> -->
-<p> I am venezuela-spanish and in the 2019
-    <!--<span class="letter"></span><i class="fas fa-plane"></i> --> I
-    moved to
-    France!
-</p>
-<p> I am journalist, but when I changed country I also decide to change proffesional path and become
-    a programmer. Right now i am studing to get my certificate of web developper and looking for a stage in
-    Lyon or close to this wonderful city.</p>
+<article id="base">
+    <p>Hi there! I am Jessica Villar a restless curious mind. </p>
+    <p> I am venezuela-spanish and in the 2019 I moved to France!</p>
+    <p> I am journalist, but when I changed country I also decide to change proffesional path and become
+        a programmer. Right now i am studing to get my certificate of web developper and looking for a stage
+        in Lyon or close to this wonderful city.</p>
+</article>
