woman icon in about me

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="hidder">
                 <div id="circle">
                     <div class="feature one">
-                        <img src="camera.png">
+                        <img src="woman-2763547.svg" id="imgAbout">
                         <div>
                             <h1>About Me</h1>
                             <p> some text</p>
