svg in white, img about change direction

--- a/index.html
+++ b/index.html
@@ -60,32 +60,28 @@
             <div class="hidder">
                 <div id="circle">
                     <div class="feature one">
-                        <img src="woman-2763547.svg" id="imgAbout">
-                        <div>
-                            <h1>About Me</h1>
-                            <p> some text</p>
-                        </div>
+                        <img src="imgAbout.svg" class="imgIcon imgAbout">
+
+                        <h2>About Me</h2>
+
                     </div>
                     <div class="feature two">
-                        <img src="battery.png">
-                        <div>
-                            <h1>Projects</h1>
-                            <p> some text</p>
-                        </div>
+                        <img src="imgProjects.svg" class="imgIcon imgProjects">
+
+                        <h2>Projects</h2>
+
                     </div>
                     <div class="feature three">
-                        <img src="processor.png">
-                        <div>
-                            <h1>Education</h1>
-                            <p> some text</p>
-                        </div>
+                        <img src="imgEducation.svg" class="imgIcon">
+
+                        <h2>Education</h2>
+
                     </div>
                     <div class="feature four">
-                        <img src="display.png">
-                        <div>
-                            <h1>Skills</h1>
-                            <p> some text</p>
-                        </div>
+                        <img src="imgSkills.svg" class="imgIcon">
+
+                        <h2>Skills</h2>
+
                     </div>
                 </div>
             </div>
