flags change of language added

--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
 <body>
     <header>
         <nav>
+            <ul>
+                <li>Home</li>
+                <li>Get my CV</li>
+                <li>Contact me</li>
+                <li>
+                    <ul>
+                        <li><img src="flagUK.png"></li>
+                        <li><img src="flagSpain.png"></li>
+                        <li><img src="flagFrance.png"></li>
+                    </ul>
+                </li>
+            </ul>
 
-            <div class="nav-links">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Get my CV</a></li>
-                    <li><a href="#">Contact me</a></li>
-                    <li><a href="#"> Language</a></li>
-                </ul>
-            </div>
         </nav>
     </header>
     <main>
         <section id="textPrincipal">
             <article id="base">
-                <p>Hi there! I am Jessica Villar a restless curious mind. </p>
-                <p> I am venezuela-spanish and in the 2019 I moved to France!</p>
-                <p> I am journalist, but when I changed country I also decide to change proffesional path and become
+                <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
+                <p> I am venezuelan-spanish and in the 2019 I moved to France!</p>
+                <p> My carreer is journalism, but when I changed country I also decide to change proffesional path and
+                    become
                     a programmer. Right now i am studing to get my certificate of web developper and looking for a stage
                     in Lyon or close to this wonderful city.</p>
             </article>
