translation system starting

--- a/index_espanol.html
+++ b/index_espanol.html
@@ -13,14 +13,14 @@
     <header>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Get my CV</li>
-                <li>Contact me</li>
+                <li>Inicio</li>
+                <li>Mi CV para llevar</li>
+                <li>Contactame</li>
                 <li>
                     <ul>
-                        <li><img class="changeLanguage" src="flagUK.png"></li>
-                        <li><img class="changeLanguage" src="flagSpain.png"></li>
-                        <li><img class="changeLanguage" src="flagFrance.png"></li>
+                        <li><img src="flagUK.png"></li>
+                        <li><img src="flagSpain.png"></li>
+                        <li><img src="flagFrance.png"></li>
                     </ul>
                 </li>
             </ul>
@@ -30,12 +30,12 @@
     <main>
         <section id="textPrincipal">
             <article id="base">
-                <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
-                <p> I am a venezuelan-spanish and in the 2019 I moved to France!</p>
-                <p> My carreer started as journalist, but when I changed country I also decided to change professional
-                    path and become a programmer. Right now I am studying to get my certificate of web developper and
-                    looking for a
-                    internship (stage) in Lyon or close to this wonderful city.</p>
+                <p>Hola a todos. Me llamo Jessica Villar; soy una mente inquieta y curiosa. </p>
+                <p> Soy venezolana y en el 2019 me mudé a Francia</p>
+                <p> Mi carrera comenzó con el periodismo, pero cuando cambié de país también decidí cambiar de camino
+                    profesional y convertirme en programadora. Ahora mismo estoy estudiando para obtener mi certificado
+                    de desarrolladora web y
+                    buscando una prácticas (stage) en Lyon o cerca de esta maravillosa ciudad.</p>
             </article>
         </section>
         <ul class="controls">
@@ -44,17 +44,17 @@
                     <img src="arrow.png" id="upBtn">
                 </li>
                 <li id="about">
-                    <h4>About me</h4>
+                    <h4>Sobre mi</h4>
 
                 </li>
                 <li id="projects">
-                    <h4>Projects</h4>
+                    <h4>Proyectos</h4>
                 </li>
                 <li id="education">
-                    <h4>Education</h4>
+                    <h4>Educacion</h4>
                 </li>
                 <li id="skills">
-                    <h4>Skills</h4>
+                    <h4>Capacidades y conocimientos</h4>
                 </li>
                 <li>
                     <img src="arrow.png" id="downBtn">
@@ -67,7 +67,7 @@
                     <div class="feature one">
                         <img src="imgAbout.svg" class="imgIcon imgAbout">
 
-                        <h2>About Me</h2>
+                        <h2>Sobre mi</h2>
 
                     </div>
                     <div class="feature two">
