function change language bug version that does not connect with the script js

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <li>Contact me</li>
                 <li>
                     <ul>
-                        <li><img class="changeLanguage" src="flagUK.png"></li>
-                        <li><img class="changeLanguage" src="flagSpain.png"></li>
-                        <li><img class="changeLanguage" src="flagFrance.png"></li>
+                        <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
+                        <li><img class="changeLanguage" data-language="Spanish" src="flagSpain.png"></li>
+                        <li><img class="changeLanguage" data-language="French" src="flagFrance.png"></li>
                     </ul>
                 </li>
             </ul>
