--- a/indexSpanish.html
+++ b/indexSpanish.html
@@ -18,9 +18,9 @@
                 <li>Contactame</li>
                 <li>
                     <ul>
-                        <li><img src="flagUK.png"></li>
-                        <li><img src="flagSpain.png"></li>
-                        <li><img src="flagFrance.png"></li>
+                        <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
+                        <li><img class="changeLanguage" data-language="Spanish" src="flagSpain.png"></li>
+                        <li><img class="changeLanguage" data-language="French" src="flagFrance.png"></li>
                     </ul>
                 </li>
             </ul>
