toTranslate class and function to change language of elements with that class

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Get my CV</li>
-                <li>Contact me</li>
+                <li class="translate">Home</li>
+                <li class="translate">Get my CV</li>
+                <li class="translate">Contact me</li>
                 <li>
                     <ul>
                         <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
@@ -44,17 +44,17 @@
                     <img src="arrow.png" id="upBtn">
                 </li>
                 <li id="about">
-                    <h4>About me</h4>
+                    <h3 class="translate">About me</h3>
 
                 </li>
                 <li id="projects">
-                    <h4>Projects</h4>
+                    <h3 class="translate">Projects</h3>
                 </li>
                 <li id="education">
-                    <h4>Education</h4>
+                    <h3 class="translate">Education</h3>
                 </li>
                 <li id="skills">
-                    <h4>Skills</h4>
+                    <h3 class="translate">Skills</h3>
                 </li>
                 <li>
                     <img src="arrow.png" id="downBtn">
@@ -67,25 +67,25 @@
                     <div class="feature one">
                         <img src="imgAbout.svg" class="imgIcon imgAbout">
 
-                        <h2>About Me</h2>
+                        <h2 class="translate">About Me</h2>
 
                     </div>
                     <div class="feature two">
                         <img src="imgProjects.svg" class="imgIcon imgProjects">
 
-                        <h2>Projects</h2>
+                        <h2 class="translate">Projects</h2>
 
                     </div>
                     <div class="feature three">
                         <img src="imgEducation.svg" class="imgIcon">
 
-                        <h2>Education</h2>
+                        <h2 class="translate">Education</h2>
 
                     </div>
                     <div class="feature four">
                         <img src="imgSkills.svg" class="imgIcon">
 
-                        <h2>Skills</h2>
+                        <h2 class="translate">Skills</h2>
 
                     </div>
                 </div>
