--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/92d195fa75.js" crossorigin="anonymous"></script>
 </head>
 
-<body id="three-container">
+<body>
     <header>
         <nav>
             <ul>
@@ -21,6 +21,7 @@
                         <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
                         <li><img class="changeLanguage" data-language="Spanish" src="flagSpain.png"></li>
                         <li><img class="changeLanguage" data-language="French" src="flagFrance.png"></li>
+
                     </ul>
                 </li>
             </ul>
