black left bar base

--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>bootstrap-version</title>
     <script src="https://kit.fontawesome.com/92d195fa75.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <header>
+<body class="container h-100 mx-0">
+    <div class="row h-100">
+
+        <div class="col-md-2 bg-dark ">
+
+            <ul class="controls">
+
+                <li>
+                    <img src=" arrow.png" id="upBtn">
+                </li>
+                <li id="about">
+                    <h3 class="translate">About me</h3>
+                    </ i>
+                <li id="projects">
+                    <h3 class="translate">Projects</h3>
+                </li>
+                <li id="education">
+                    <h3 class="translate">Education</h3>
+                </li>
+                <li id="skills">
+                    <h3 class="translate">Skills</h3>
+                </li>
+                <li>
+                    <img src="arrow.png" id="downBtn">
+                </li>
+
+            </ul>
+
+
+        </div>
+        <div class="col-md-3">
+            arrows
+        </div>
+        <div class="col-md-6">
+            content
+        </div>
+
+    </div>
+
+
+    <!-- <header>
         <nav>
             <ul>
                 <li class="translate">Home</li>
@@ -91,10 +132,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
-    </main>
+    <!-- </main> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
