triangle in place

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="controls">
 
                 <li>
-                    <img src=" arrow.png" id="upBtn">
+                    <img src="arrow.png" id="upBtn">
                 </li>
                 <li id="about">
                     <h3 class="translate">About me</h3>
@@ -38,12 +38,39 @@
                 </li>
 
             </ul>
-
-
         </div>
         <div class="col-md-3">
-            arrows
+            <!-- <div class="hidder_container"> -->
+            <div class="cube-triangle">
+                <div id="circle">
+                    <div class="feature one">
+                        <img src="imgAbout.svg" class="imgIcon imgAbout">
+
+                        <h2 class="translate">About Me</h2>
+
+                    </div>
+                    <div class="feature two">
+                        <img src="imgProjects.svg" class="imgIcon imgProjects">
+
+                        <h2 class="translate">Projects</h2>
+
+                    </div>
+                    <div class="feature three">
+                        <img src="imgEducation.svg" class="imgIcon">
+
+                        <h2 class="translate">Education</h2>
+
+                    </div>
+                    <div class="feature four">
+                        <img src="imgSkills.svg" class="imgIcon">
+
+                        <h2 class="translate">Skills</h2>
+
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- </div> -->
         <div class="col-md-6">
             content
         </div>
