--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h2 class="translate">Projects</h2>
 
                     </div>
-                    <div class="feature three">
+                    <!-- <div class="feature three">
                         <img src="imgEducation.svg" class="imgIcon">
 
                         <h2 class="translate">Education</h2>
@@ -65,7 +65,7 @@
 
                         <h2 class="translate">Skills</h2>
 
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
