icons in circle aligned

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="container h-100 mx-0">
     <div class="row h-100">
 
-        <div class="col-md-2 bg-dark ">
+        <div class="col-md-2">
 
             <ul class="controls">
 
@@ -40,36 +40,28 @@
             </ul>
         </div>
         <div class="col-md-3">
-            <!-- <div class="hidder_container"> -->
             <div class="cube-triangle">
                 <div id="circle">
                     <div class="feature one">
                         <img src="imgAbout.svg" class="imgIcon imgAbout">
-                        <h2 class="translate">About Me</h2>
-
                     </div>
+                    <h2 class="translate">About Me</h2>
                     <div class="feature two">
                         <img src="imgProjects.svg" class="imgIcon imgProjects">
-
                         <h2 class="translate">Projects</h2>
-
                     </div>
-                    <!-- <div class="feature three">
+
+                    <div class="feature three">
                         <img src="imgEducation.svg" class="imgIcon">
-
                         <h2 class="translate">Education</h2>
-
                     </div>
                     <div class="feature four">
                         <img src="imgSkills.svg" class="imgIcon">
-
                         <h2 class="translate">Skills</h2>
-
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- </div> -->
         <div class="col-md-6">
             content
         </div>
