script spin update to change color of icons and keep them hide

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
             <div class="cube-triangle">
                 <div id="circle">
                     <div class="feature one">
-                        <img src="imgAbout.svg" class="imgIcon imgAbout">
+                        <img src="imgAbout.svg" class="imgIcon" id="imgAbout">
                     </div>
                     <h2 class="translate">About Me</h2>
                     <div class="feature two">
-                        <img src="imgProjects.svg" class="imgIcon imgProjects">
+                        <img src="imgProjects.svg" class="imgIcon" id="imgProjects">
                         <h2 class="translate">Projects</h2>
                     </div>
 
                     <div class="feature three">
-                        <img src="imgEducation.svg" class="imgIcon">
+                        <img src="imgEducation.svg" class="imgIcon" id="imgEducation">
                         <h2 class="translate">Education</h2>
                     </div>
                     <div class="feature four">
-                        <img src="imgSkills.svg" class="imgIcon">
+                        <img src="imgSkills.svg" class="imgIcon" id="imgSkills">
                         <h2 class="translate">Skills</h2>
                     </div>
                 </div>
