"about" will be already with opacity 1 in load

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col-md-3">
             <div class="cube-triangle">
                 <div id="circle">
-                    <div class="feature one">
+                    <div class="feature">
                         <img src="imgAbout.svg" class="imgIcon" id="imgAbout">
                     </div>
                     <h2 class="translate">About Me</h2>
