starting adjustments for navbar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             </ul>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="cube-triangle">
                 <div id="circle">
                     <div class="feature">
@@ -62,8 +62,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
-            content
+        <div class="col-md-8 bg-danger">
+            Navbar?
         </div>
 
     </div>
